fix: Apply the right style for Jupyter code cells in dark mode

--- a/public/style.css
+++ b/public/style.css
@@ -189,3 +189,12 @@ dl.dl-config dd {
 .hidden-important {
     @apply hidden !important;
 }
+
+/*
+ * A hack to ensure that Jupyter output images are always rendered with a
+ * neutral background color, even if the image itself does not have one, since
+ * Jupyter usually outputs images with transparent or light backgrounds.
+ */
+.dark .jupyter-output img {
+  background-color: #888;
+}
